--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^6.15.0",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0"
   }
 }
